# annotatorlib

./: .appveyor.yml  .clang-tidy  .conanfile.txt  .coveralls.yml  .gitignore  .gitmodules  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  annotatorlib-config.cmake  conanfile.txt
cmake/: 3rdParty.cmake  Clang-Format.cmake  Clang-Tidy.cmake  CompileOptions.cmake  conan.cmake
codegeneration/: annotatorlib_features.h  baselib_features.h  fiblib_features.h
deploy/: CMakeLists.txt
deploy/docker/: docker-compose.yml
deploy/docker/cpu/: Dockerfile
deploy/docker/gpu/: Dockerfile
deploy/docker/ipynb/: Dockerfile  flickr.json  flickr.pro.xml  pyannotatorlib.ipynb
docs/api-docs/: CMakeLists.txt  doxyfile.in
docs/manual/: CMakeLists.txt  annotatorlib.tex
source/: .gitignore  CMakeLists.txt
source/annotatorlib/: CMakeLists.txt
source/annotatorlib/include/AnnotatorLib/: .gitignore  Annotation.h  AnnotatorAlgoInterface.h  AnnotatorLib.h.in  AnnotatorLibDatastructs.h  Attribute.h  Camera.h  Class.h  Frame.h  Image.h  ImageFTP.h  ImageFolder.h  ImageSet.h  ImageSetFactory.h  Object.h  Project.h  Session.h  Video.h
source/annotatorlib/include/AnnotatorLib/Algo/: AdjustAnnotation.h  CompressObjectTrack.h  InterpolateAnnotation.h  SmoothAnnotation.h
source/annotatorlib/include/AnnotatorLib/Commands/: AdjustNeighbors.h  CleanSession.h  Command.h  CompressObject.h  CompressSession.h  MergeObjects.h  NewAnnotation.h  NewAttribute.h  NewObject.h  RemoveAnnotation.h  RemoveAnnotationRange.h  RemoveAttribute.h  RemoveObject.h  UpdateAnnotation.h  UpdateAttribute.h  UpdateObject.h
source/annotatorlib/include/AnnotatorLib/Export/: AbstractExport.h  ExportAnnotationImages.h  ExportFactory.h  ExportPlugin.h  Pkg_Export.h
source/annotatorlib/include/AnnotatorLib/ImageSet/: AbstractImageSet.h  Camera.h  ImageFTP.h  ImageFolder.h  ImageSet.h  ImageSetFactory.h  ImageSetPlugin.h  Pkg_ImageSet.h  Video.h
source/annotatorlib/include/AnnotatorLib/Loader/: AbstractLoader.h  JSONLoader.h  LoaderFactory.h  MongoDBLoader.h  MySQLLoader.h  Pkg_Loader.h  SQLLoader.h  SQLiteLoader.h  XMLLoader.h
source/annotatorlib/include/AnnotatorLib/Saver/: AbstractSaver.h  JSONSaver.h  MySQLSaver.h  PascalVocXMLSaver.h  Pkg_Saver.h  SQLSaver.h  SQLiteSaver.h  SaverFactory.h  XMLSaver.h
source/annotatorlib/include/AnnotatorLib/Storage/: AbstractLoader.h  AbstractSaver.h  AbstractStorage.h  JSONLoader.h  JSONSaver.h  JSONStorage.h  MongoDBStorage.h  MySQLLoader.h  MySQLSaver.h  MySQLStorage.h  Pkg_Storage.h  SQLiteLoader.h  SQLiteStorage.h  StorageFactory.h  StoragePlugin.h  XMLLoader.h  XMLSaver.h  XMLStorage.h
source/annotatorlib/source/: Annotation.cpp  AnnotatorLibDatastructs.cpp  Attribute.cpp  Camera.cpp  Class.cpp  Frame.cpp  Image.cpp  ImageFTP.cpp  ImageFolder.cpp  ImageSetFactory.cpp  Object.cpp  Project.cpp  Session.cpp  Video.cpp
source/annotatorlib/source/Algo/: AdjustAnnotation.cpp  CompressObjectTrack.cpp  InterpolateAnnotation.cpp  SmoothAnnotation.cpp
source/annotatorlib/source/Commands/: AdjustNeighbors.cpp  CleanSession.cpp  CompressObject.cpp  CompressSession.cpp  MergeObjects.cpp  NewAnnotation.cpp  NewAttribute.cpp  NewObject.cpp  RemoveAnnotation.cpp  RemoveAnnotationRange.cpp  RemoveAttribute.cpp  RemoveObject.cpp  UpdateAnnotation.cpp  UpdateAttribute.cpp  UpdateObject.cpp
source/annotatorlib/source/Export/: ExportAnnotationImages.cpp  ExportFactory.cpp
source/annotatorlib/source/ImageSet/: Camera.cpp  ImageFTP.cpp  ImageFolder.cpp  ImageSetFactory.cpp  Video.cpp
source/annotatorlib/source/Loader/: JSONLoader.cpp  LoaderFactory.cpp  MongoDBLoader.cpp  MySQLLoader.cpp  SQLLoader.cpp  SQLiteLoader.cpp  XMLLoader.cpp
source/annotatorlib/source/Saver/: JSONSaver.cpp  MySQLSaver.cpp  PascalVocXMLSaver.cpp  SQLSaver.cpp  SQLiteSaver.cpp  SaverFactory.cpp  XMLSaver.cpp
source/annotatorlib/source/Storage/: JSONLoader.cpp  JSONSaver.cpp  JSONStorage.cpp  MongoDBStorage.cpp  MySQLLoader.cpp  MySQLSaver.cpp  MySQLStorage.cpp  SQLiteLoader.cpp  SQLiteStorage.cpp  StorageFactory.cpp  XMLLoader.cpp  XMLSaver.cpp  XMLStorage.cpp
source/examples/: CMakeLists.txt
source/examples/fibcmd/: main.cpp
source/examples/fibgui/: MainWindow.cpp  MainWindow.h  main.cpp
source/imagesets/: CMakeLists.txt
source/imagesets/camera/: CMakeLists.txt  Camera.cpp  Camera.h  CameraPlugin.cpp  CameraPlugin.h
source/imagesets/imageftp/: CMakeLists.txt  ImageFTP.cpp  ImageFTP.h  ImageFTPPlugin.cpp  ImageFTPPlugin.h
source/imagesets/video/: CMakeLists.txt  Video.cpp  Video.h  VideoPlugin.cpp  VideoPlugin.h
source/python/: CMakeLists.txt  README.md  pyannotatorlib.cpp  pyboost_cv2_converter.cpp  pyboost_cv3_converter.cpp
source/storages/: CMakeLists.txt
source/storages/mongodb/: CMakeLists.txt  MongoDBLoader.cpp  MongoDBLoader.h  MongoDBPlugin.cpp  MongoDBPlugin.h  MongoDBStorage.cpp  MongoDBStorage.h
source/storages/mysql/: CMakeLists.txt  MySQLLoader.cpp  MySQLLoader.h  MySQLPlugin.cpp  MySQLPlugin.h  MySQLSaver.cpp  MySQLSaver.h  MySQLStorage.cpp  MySQLStorage.h
source/storages/sqlite/: CMakeLists.txt  SQLiteLoader.cpp  SQLiteLoader.h  SQLitePlugin.cpp  SQLitePlugin.h  SQLiteSaver.cpp  SQLiteSaver.h  SQLiteStorage.cpp  SQLiteStorage.h
source/tests/: CMakeLists.txt
source/tests/annotatorlib-test/: CMakeLists.txt  algo_adjust_test.cpp  algo_smooth_test.cpp  algo_test.cpp  annotation_test.cpp  attribute_test.cpp  command_adjustneighbors.cpp  commands_test.cpp  imageftp_test.cpp  imageset_test.cpp  main.cpp  object_test.cpp  project_test.cpp  saver_test.cpp  session_test.cpp  storage_json_test.cpp  storage_mongodb_test.cpp  storage_mysql_test.cpp  storage_sqlite_test.cpp  storage_xml_test.cpp
source/tests/pyannotatorlib-test/: CMakeLists.txt  pyannotatorlib-test.py
